# kpod-metrics

./: .dockerignore  .editorconfig  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  artifacthub-repo.yml  blog-post-ko.md  blog-post.md  build.gradle.kts  demo.cast  existing-index.yaml  gradle.properties  index.html  index.yaml  kpod-metrics-1.11.0.tgz  mkdocs.yml  settings.gradle.kts  sitemap.xml
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  helm-repo.yml  publish.yml  release.yml
architecture/codegen/: index.html
architecture/ebpf-dsl/: index.html
architecture/overview/: index.html
architecture/scaling/: index.html
bpf/: common.h  compat_vmlinux.h  cpu_profile.bpf.c  cpu_sched.bpf.c  dns.bpf.c  http.bpf.c  mem.bpf.c  net.bpf.c  syscall.bpf.c  tcp_peer.bpf.c  vmlinux.h
changelog/: index.html
config/detekt/: detekt.yml
development/adding-collector/: index.html
development/building/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: demo.cast  index.md  topology.md  troubleshooting.md
docs/architecture/: codegen.md  ebpf-dsl.md  overview.md  scaling.md
docs/development/: adding-collector.md  building.md  contributing.md  testing.md
docs/features/: grafana.md  otlp.md  prometheus-operator.md  topology.md
docs/getting-started/: configuration.md  prerequisites.md  profiles.md  quickstart.md
docs/launch/: hackernews.md  reddit.md
docs/metrics/: cgroup.md  ebpf.md  l7.md  overview.md  self-monitoring.md
docs/operations/: security.md  troubleshooting.md
docs/plans/: 2026-02-22-kpod-metrics-design.md  2026-02-22-kpod-metrics-implementation.md  2026-02-23-merge-pod-metrics-exporter-design.md  2026-02-23-merge-pod-metrics-exporter-plan.md  2026-02-25-dsl-integration-design.md  2026-02-25-dsl-integration-plan.md  2026-02-28-cicd-hardening-design.md  2026-02-28-prometheus-operator-design.md  2026-03-03-continuous-profiling-design.md  2026-03-03-continuous-profiling-impl.md  2026-03-08-dns-metrics-design.md  2026-03-08-dns-metrics-plan.md  (+10 more)
e2e/: e2e-test.sh  workloads.yaml
gradle/: libs.versions.toml
grafana/: kpod-metrics-dashboard.json
jni/: CMakeLists.txt  bpf_bridge.c  bpf_bridge.h
metrics/ebpf/: index.html
scripts/: quickstart.sh  record-demo.sh  stress-workload.yaml  test-local-k8s.sh  validate-bpf-overhead.sh
search/: search_index.json
site/: index.html
topology/: index.html
troubleshooting/: index.html
(+208 files in other folders)
